微調整＋PDF変更

--- a/メモ/説明メモ_私秘性と説明ギャップ.md
+++ b/メモ/説明メモ_私秘性と説明ギャップ.md
@@ -49,4 +49,4 @@
 
 # まとめ
 
-## 伝えても(圧縮ラベル)伝えきれない( 較正不能性)「説明ギャップ」この気持ち(圧縮での欠如情報)「私秘性」→クオリア
+## 伝えても→(圧縮ラベル)、伝えきれない→( 較正不能性)→「説明ギャップ」、この気持ち→(圧縮での欠如情報)→「私秘性」。そうじてクオリア
